--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Todo List</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <link rel="stylesheet" href="style.css" />
+  </head>
 
-<body>
-    <h1>Todo List</h1>
-    <form class="todoContainer">
-        <input type="text" class="todoInput" placeholder="Type Your Todo List">
+  <div>
+   <div class="todoMainContainer">
+    <h1>To-do List</h1>
+    <div class="todoContainer">
+      <form class="todoContainer">
+        <input
+          type="text"
+          class="todoInput"
+          placeholder="Type Your Todo List"
+        />
         <button type="submit">Add Task</button>
-    </form>
+      </form>
 
-    <div class="card-mainContainer">
+      <div class="card-mainContainer">
         <div class="card-container">
-            <!-- <div class="container"> 
+          <!-- <div class="container"> 
                 <div class="text">
                     <p class="task-add">I will cook Today</p>
                 </div>
@@ -27,11 +32,10 @@
                 </div>
             </div> -->
         </div>
-
+      </div>
+    </div>
     </div>
 
-
-    <script src="script2.js"></script>
-</body>
-
+    <script src="./script.js"></script>
+  </body>
 </html>
